--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "esModuleInterop": true,
         "strict": true,
         "skipLibCheck": true,
+        "noImplicitAny": false
     },
     "ts-node": {
         "esm": true
